--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "expo lint",
+    "typecheck": "tsc --noEmit",
     "draft": "npx eas-cli@latest workflow:run create-draft.yml",
     "development-builds": "npx eas-cli@latest workflow:run create-development-builds.yml",
     "deploy": "npx eas-cli@latest workflow:run deploy-to-production.yml"
@@ -22,21 +23,27 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.27",
     "@react-navigation/native-stack": "^7.9.1",
+    "@supabase/supabase-js": "^2.90.1",
+    "axios": "^1.13.2",
     "expo": "~54.0.10",
+    "expo-auth-session": "~7.0.10",
     "expo-blur": "~15.0.8",
     "expo-constants": "~18.0.9",
+    "expo-crypto": "~15.0.8",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.8",
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.8",
+    "expo-local-authentication": "~17.0.8",
     "expo-router": "~6.0.8",
+    "expo-secure-store": "~15.0.8",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-updates": "~29.0.16",
-    "expo-web-browser": "~15.0.7",
+    "expo-web-browser": "~15.0.10",
     "lucide-react-native": "^0.562.0",
     "moti": "^0.30.0",
     "react": "19.1.0",
@@ -47,6 +54,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "zustand": "^5.0.10"
@@ -55,6 +63,7 @@
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "react-native-svg-transformer": "^1.5.2",
     "typescript": "~5.9.2"
   }
 }
