--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "deploy": "npx eas-cli@latest workflow:run deploy-to-production.yml"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.4.2",
+    "@expo-google-fonts/poppins": "^0.4.1",
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
@@ -30,7 +32,7 @@
     "expo-blur": "~15.0.8",
     "expo-constants": "~18.0.9",
     "expo-crypto": "~15.0.8",
-    "expo-font": "~14.0.8",
+    "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.8",
     "expo-linear-gradient": "~15.0.8",
@@ -50,6 +52,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
