updated UI with semicrcle menu treades section binacne integariont improved welcome features page

--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@
 # 1. Android Emulator (Android Studio): http://10.0.2.2:3000
 # 2. iOS Simulator: http://localhost:3000
 # 3. Real Device (USB/WiFi): http://YOUR_COMPUTER_IP:3000
-#    Your current LAN IP: 192.168.1.20
+#    Your current machine IP: 192.168.1.16
 # 4. Production: https://api.yourdomain.com
 
-# For Real Android Device, use your computer's LAN IP:
-EXPO_PUBLIC_API_URL=http://192.168.1.20:3000
+# Use your computer's current LAN IP for both Emulator and Real Device compatibility:
+EXPO_PUBLIC_API_URL=http://192.168.1.18:3000
 
 # App Configuration
 EXPO_PUBLIC_APP_NAME=TradeBot
