--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.27",
-    "@react-navigation/native-stack": "^7.9.1",
+    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/native-stack": "^7.3.16",
     "@supabase/supabase-js": "^2.90.1",
     "axios": "^1.13.2",
     "expo": "~54.0.10",
@@ -32,13 +32,13 @@
     "expo-blur": "~15.0.8",
     "expo-constants": "~18.0.9",
     "expo-crypto": "~15.0.8",
-    "expo-font": "~14.0.10",
+    "expo-font": "~14.0.11",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.8",
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.8",
     "expo-local-authentication": "~17.0.8",
-    "expo-router": "~6.0.8",
+    "expo-router": "~6.0.22",
     "expo-secure-store": "~15.0.8",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
@@ -51,6 +51,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~4.1.1",
