fixed issue trading bot modal theme context succes modal env for backend code that is in production

--- a/.env
+++ b/.env
@@ -13,8 +13,8 @@
 # 4. Production: https://api.yourdomain.com
 
 # Use your computer's current LAN IP for both Emulator and Real Device compatibility:
-EXPO_PUBLIC_API_URL=http://192.168.1.18:3000
-
+# EXPO_PUBLIC_API_URL=http://192.168.1.18:3000
+EXPO_PUBLIC_API_URL=http://146.59.93.94:3000
 # App Configuration
 EXPO_PUBLIC_APP_NAME=TradeBot
 EXPO_PUBLIC_APP_VERSION=1.0.0
