--- a/app.json
+++ b/app.json
@@ -1,27 +1,25 @@
 {
   "expo": {
-    "name": "FRONTEND",
-    "slug": "FRONTEND",
+    "name": "ByteBoom AI",
+    "slug": "byteboom-ai",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "frontend",
+    "scheme": "byteboom",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.sibtenajam.appFRONTEND"
+      "bundleIdentifier": "com.byteboom.ai"
     },
     "android": {
       "adaptiveIcon": {
-        "backgroundColor": "#E6F4FE",
-        "foregroundImage": "./assets/images/android-icon-foreground.png",
-        "backgroundImage": "./assets/images/android-icon-background.png",
-        "monochromeImage": "./assets/images/android-icon-monochrome.png"
+        "backgroundColor": "#7c3aed",
+        "foregroundImage": "./assets/images/logo.png"
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "package": "com.sibtenajam.appFRONTEND"
+      "package": "com.byteboom.ai"
     },
     "web": {
       "output": "static",
@@ -35,9 +33,10 @@
           "image": "./assets/images/splash-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff",
+          "backgroundColor": "#7c3aed",
           "dark": {
-            "backgroundColor": "#000000"
+            "image": "./assets/images/splash-icon.png",
+            "backgroundColor": "#1a0f2e"
           }
         }
       ],
@@ -52,13 +51,10 @@
     "extra": {
       "router": {},
       "eas": {
-        "projectId": "0c5d4c82-8aff-48f5-a92d-d4da62d3b355"
+        "projectId": "6b1ecd8e-3189-4ce2-9230-6e23aa28071c"
       }
     },
     "owner": "sibtenajam",
-    "updates": {
-      "url": "https://u.expo.dev/0c5d4c82-8aff-48f5-a92d-d4da62d3b355"
-    },
     "runtimeVersion": {
       "policy": "appVersion"
     }
