--- a/.env
+++ b/.env
@@ -14,7 +14,10 @@
 
 # Use your computer's current LAN IP for both Emulator and Real Device compatibility:
 # EXPO_PUBLIC_API_URL=http://192.168.1.18:3000
-EXPO_PUBLIC_API_URL=http://146.59.93.94:3000
+# EXPO_PUBLIC_API_URL=http://146.59.93.94:3000
+EXPO_PUBLIC_API_URL=https://6bc49f82fb01.ngrok-free.app
+# EXPO_PUBLIC_API_URL=https://backend-production-6851.up.railway.app
+
 # App Configuration
 EXPO_PUBLIC_APP_NAME=TradeBot
 EXPO_PUBLIC_APP_VERSION=1.0.0
