apk wokring make api calls optmized using Zustand state managment librray and added fonts from google

--- a/FRONTEND/.env
+++ b/FRONTEND/.env
@@ -13,9 +13,11 @@
 # 4. Production: https://api.yourdomain.com
 
 # Use your computer's current LAN IP for both Emulator and Real Device compatibility:
-# EXPO_PUBLIC_API_URL=http://192.168.1.18:3000
-# EXPO_PUBLIC_API_URL=http://146.59.93.94:3000
-EXPO_PUBLIC_API_URL=https://6bc49f82fb01.ngrok-free.app
+# EXPO_PUBLIC_API_URL=http://192.168.1.23:3000
+
+# EXPO_PUBLIC_API_URL=http://192.168.1.15:3000
+EXPO_PUBLIC_API_URL=https://backend.coolify.cryptbot.site
+# EXPO_PUBLIC_API_URL=https://6bc49f82fb01.ngrok-free.app
 # EXPO_PUBLIC_API_URL=https://backend-production-6851.up.railway.app
 
 # App Configuration
