--- a/FRONTEND/.gitignore
+++ b/FRONTEND/.gitignore
@@ -32,6 +32,10 @@ yarn-error.*
 
 # local env files
 .env*.local
+# Environment variables (root + subfolders)
+.env
+.env.*
+!.env.example
 
 # typescript
 *.tsbuildinfo
