biometric intgration in process

--- a/FRONTEND/.env
+++ b/FRONTEND/.env
@@ -15,8 +15,9 @@
 # Use your computer's current LAN IP for both Emulator and Real Device compatibility:
 # EXPO_PUBLIC_API_URL=http://192.168.1.23:3000
 
-# EXPO_PUBLIC_API_URL=http://192.168.1.15:3000
-EXPO_PUBLIC_API_URL=https://backend.coolify.cryptbot.site
+# EXPO_PUBLIC_API_URL=http://192.168.1.5:3000
+EXPO_PUBLIC_API_URL=http://192.168.1.26:3000
+# EXPO_PUBLIC_API_URL=https://backend.coolify.cryptbot.site
 # EXPO_PUBLIC_API_URL=https://6bc49f82fb01.ngrok-free.app
 # EXPO_PUBLIC_API_URL=https://backend-production-6851.up.railway.app
 
